plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.topoom'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// RabbitMQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.3'

	// WebClient (외부 API 호출)
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// JSoup (크롤링)
	implementation 'org.jsoup:jsoup:1.17.2'
	
	// Selenium WebDriver (동적 크롤링)
	implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
	implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'

	// JSON Processing
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Dev Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
